changes for a better grade

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home Page</title>
+    <meta name="description" content="Owen Meredith - WDD231 - This is the home page">
+    <meta name="author" content="Owen Meredith">
+    <title>WDD231 - Home Page - Owen Meredith</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Boldonse&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <img src="images/profile.webp">
+        <img src="images/profile.webp" alt="profile Picture">
         <span> Owen Meredith</span>
     </header>
 
