--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             </section>
         </div>
         <div class="full-width">
+            <div id="filter-buttons">
+                <button onclick="filterCourses('All')">All</button>
+                <button onclick="filterCourses('CSE')">CSE</button>
+                <button onclick="filterCourses('WDD')">WDD</button>
+            </div>
             <section id="courses-list">
-                <div id="filters">
-                    <button data-filter="all">All Courses</button>
-                    <button data-filter="WDD">WDD Courses</button>
-                    <button data-filter="CSE">CSE Courses</button>
-                </div>
                 <h2> Web and Computer Programming </h2>
             </section>
         </div>
