--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,8 +8,9 @@
     <meta name="author" content="Owen Meredith">
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
-    <meta property="og:image" content="https://example.com/path-to-image.jpg" />
-    <meta property="og:url" content="https://example.com/page-url" />
+    <meta property="og:image"
+        content="https://itoldya420.getarchive.net/amp/media/burnet-house-and-chamber-of-commerce-cincinnati-ohio-57fbf9" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Chamber" />
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
@@ -35,11 +36,11 @@
     </header>
 
     <div class="hero">
-        <p>scalable, responsive hero image</p>
+        <img src="images/chamber.jpg" alt="chamber of commerce building">
         <button>Keynote Tickets</button>
     </div>
 
-    <h1>Home</h1>
+    <h1>WDD - Chamber Directory Page - Owen Meredtih</h1>
     <section>
         <article>
             <h2>Events</h2>
