--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Owen Meredith">
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
-    <meta property="og:image"
-        content="https://itoldya420.getarchive.net/amp/media/burnet-house-and-chamber-of-commerce-cincinnati-ohio-57fbf9" />
-    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/" />
+    <meta property="og:image" content="images/chamber.jpg" />
+    <meta property="og:url" content="directory.html" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Chamber" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
     <link rel="stylesheet" href="styles/chamber.css">
@@ -37,28 +37,28 @@
 
     <div class="hero">
         <img src="images/chamber.jpg" alt="chamber of commerce building">
-        <button>Keynote Tickets</button>
     </div>
 
-    <h1>WDD - Chamber Directory Page - Owen Meredtih</h1>
-    <section>
-        <article>
-            <h2>Events</h2>
-        </article>
-        <article>
-            <h2>Current Weather</h2>
-            <p><strong>75°F</strong></p>
-            <p>Partly Cloudy<br>High: 85°<br>Low: 52°<br>Humidity: 34%<br>Sunrise: 7:30am<br>Sunset: 9:59pm</p>
-        </article>
-        <article>
-            <h2>Weather Forecast</h2>
-            <p>Today: <strong>90°F</strong></p>
-            <p>Wednesday: <strong>89°F</strong></p>
-            <p>Thursday: <strong>68°F</strong></p>
-        </article>
-    </section>
+
 
     <main>
+        <h1>WDD - Chamber Directory Page - Owen Meredtih</h1>
+        <section>
+            <article>
+                <h2>Events</h2>
+            </article>
+            <article>
+                <h2>Current Weather</h2>
+                <p><strong>75°F</strong></p>
+                <p>Partly Cloudy<br>High: 85°<br>Low: 52°<br>Humidity: 34%<br>Sunrise: 7:30am<br>Sunset: 9:59pm</p>
+            </article>
+            <article>
+                <h2>Weather Forecast</h2>
+                <p>Today: <strong>90°F</strong></p>
+                <p>Wednesday: <strong>89°F</strong></p>
+                <p>Thursday: <strong>68°F</strong></p>
+            </article>
+        </section>
         <div class="buttons">
             <button onClick="setView('grid')">Grid</button>
             <button onClick="setView('list')">List</button>
@@ -70,12 +70,7 @@
     </main>
 
     <footer>
-        <p><strong>Timbuktu Chamber of Commerce</strong><br>
-            10 Rue De La Paix<br>
-            Timbuktu, Mali 999<br>
-            info@timbuktucc.org<br>
-            (223) 555-2300</p>
-        <p>
+        <p><strong>Provo Chamber of Commerce</strong><br>
             <img src="images/facebook.webp" alt="Facebook">
             <img src="images/twitter.webp" alt="Twitter">
             <img src="images/instagram.webp" alt="Instagram">
