--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,10 +8,8 @@
     <meta name="author" content="Owen Meredith">
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
-    <meta property="og:image" content="images/chamber.jpg" />
-    <meta property="og:url" content="directory.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Chamber" />
+    <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/images/profile.webp" />
+    <meta property="og:url" content="../../index.html" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
