i dont even know what this audit tool is asking for

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Owen Meredith">
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
-    <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/images/profile.webp" />
-    <meta property="og:url" content="../../index.html" />
+    <meta property="og:image" content="../images/profile.jpg" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
