--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
     <meta property="og:image" content="../images/profile.jpg" />
-    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/images/profile.jpg" />
+    <link rel="icon" type="image/x-icon" href="https://owenmeredith12.github.io/wdd231">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
     <link rel="stylesheet" href="styles/chamber.css">
