--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Chambers Directory Page" />
     <meta property="og:description" content="A directories page for chamber" />
     <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/images/profile.webp" />
-    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
