--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
                     <span id="current-temp"></span>
                 </p>
                 <figure>
-                    <img id="weather-icon" src="" alt="">
+                    <img id="weather-icon" src="#" alt="">
                     <figcaption></figcaption>
                 </figure>
             </article>
