--- a/chamber/join.html
+++ b/chamber/join.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="A directories page for chamber" />
     <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/chamber/images/chamber.webp" />
     <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/chamber/index.html" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>WDD231 - Chamber Directory Page - Owen Meredith</title>
     <script src="scripts/chamber.js" defer></script>
     <link rel="stylesheet" href="styles/chamber.css">
@@ -40,6 +40,7 @@
 
 
     <main>
+        <h1>Contact Form</h1>
         <form method="get" action="thankyou.html">
 
             <label for="firstName">First Name</label>
