--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Owen Meredith - WDD231 - Chamber directories page">
+    <meta name="description" content="Owen Meredith - WDD231 - Chamber Discover page">
     <meta name="author" content="Owen Meredith">
-    <meta property="og:title" content="Chambers Directory Page" />
-    <meta property="og:description" content="A directories page for chamber" />
+    <meta property="og:title" content="Chambers Discover Page" />
+    <meta property="og:description" content="A Discover page for chamber" />
     <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/chamber/images/chamber.webp" />
     <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/chamber/index.html" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -43,6 +43,7 @@
 
 
     <main>
+        <h1>Discovery Page</h1>
         <h3 id="sidebar-message"></h3>
         <div id="poi-cards" class="poi-cards">
         </div>
