--- a/final/contact.html
+++ b/final/contact.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Utah County IT Professionals network." />
-    <meta name="author" content="Owen Meredith"/>
+    <meta name="author" content="Owen Meredith" />
+    <meta property="og:title" content="Final project Contact Page" />
+    <meta property="og:description" content="A contact page for the final project" />
+    <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/chamber/images/chamber.webp" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/final/index.html" />
     <title>Contact - Utah County IT Pros</title>
     <link rel="stylesheet" href="styles/project.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="scripts/script.js" defer></script>
 </head>
 
