--- a/final/index.html
+++ b/final/index.html
@@ -7,9 +7,14 @@
     <meta name="description"
         content="Connecting Utah County IT Professionals through resources, events, and opportunities." />
     <meta name="author" content="Owen Meredith" />
+    <meta property="og:title" content="Final project Home page" />
+    <meta property="og:description" content="A home page for the final project" />
+    <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/chamber/images/chamber.webp" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/final/index.html" />
     <script src="scripts/script.js" defer></script>
     <title>Utah County IT Pros</title>
     <link rel="stylesheet" href="styles/project.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="scripts/script.js" defer></script>
 </head>
 
