--- a/final/resources.html
+++ b/final/resources.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Resources for IT professionals in Utah County." />
     <meta name="author" content="Owen Meredith" />
+    <meta property="og:title" content="Final project Resources page" />
+    <meta property="og:description" content="A resources page for the final project" />
+    <meta property="og:image" content="https://owenmeredith12.github.io/wdd231/chamber/images/chamber.webp" />
+    <meta property="og:url" content="https://owenmeredith12.github.io/wdd231/final/index.html" />
     <title>Resources - Utah County IT Pros</title>
     <link rel="stylesheet" href="styles/project.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="scripts/script.js" defer></script>
 </head>
 
