--- a/final/index.html
+++ b/final/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="styles/project.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="scripts/script.js" defer></script>
+        <link
+        href="https://fonts.googleapis.com/css2?family=Boldonse&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -27,10 +30,11 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Utah County IT Professionals</h1>
+
     </header>
 
     <main>
+        <h1>Utah County IT Professionals</h1>
         <section class="intro">
             <h2>Welcome to Our Network</h2>
             <p>Your hub for connecting with IT professionals, finding job opportunities, sharing knowledge, and staying
