--- a/final/resources.html
+++ b/final/resources.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="styles/project.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="scripts/script.js" defer></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Boldonse&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +28,11 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>IT Resources</h1>
+
     </header>
 
     <main>
+        <h1>IT Resources</h1>
         <section>
             <h2>Local Tech Meetups</h2>
             <ul>
